hw12_13_14_15_calendar/k8s/resources/calendar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar
  namespace: apps
  labels:
    app: calendar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calendar
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: calendar
    spec:
      containers:
        - name: calendar
          image: calendar:develop # образ загружен в миникуб через minikube image load {imageName}
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8081
              protocol: TCP
          volumeMounts:
          - name: calendar-app-data
            mountPath: /etc/calendar/config.yaml
            subPath: hw12_13_14_15_calendar/configs/calendar_config.yaml
          readinessProbe:
            grpc:
              port: 8081
              service: "calendar-app"
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            grpc:
              port: 8081
              service: "calendar-app"
            initialDelaySeconds: 3
            periodSeconds: 10
            failureThreshold: 3
      restartPolicy: Always
      volumes:
      - name: calendar-app-data
        emptyDir: {}
