hw12_13_14_15_calendar/k8s/resources/calendar-sender-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-sender
  namespace: apps
  labels:
    app: calendar-sender
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calendar-sender
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: calendar-sender
    spec:
      containers:
        - name: calendar-sender
          image: calendar_sender:develop # образ загружен в миникуб через minikube image load {imageName}
          volumeMounts:
          - name: calendar-app-data
            mountPath: /etc/sender/config.yaml
            subPath: hw12_13_14_15_calendar/configs/sender_config.yaml
          readinessProbe: # проверка того, что создан файл
            exec:
              command:
              - cat
              - /tmp/ready
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe: # проверка того, что метка времени в файле обновляется не реже 60 секунд
            exec:
              command:
              - sh
              - -c
              - "if [ $(date +%s) -lt $(($(cat /tmp/health)+60)) ]; then exit 0; else exit 1; fi"
            initialDelaySeconds: 3
            periodSeconds: 10
      restartPolicy: Always
      volumes:
      - name: calendar-app-data
        emptyDir: {}
