hw12_13_14_15_calendar/k8s/resources/calendar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calendar
  namespace: apps
  labels:
    app: calendar
spec:
  type: ClusterIP
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
    - name: "8081"
      port: 8081
      targetPort: 8081
  selector:
    app: calendar
