hw12_13_14_15_calendar/k8s/resources/calendar-ingress-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calendar-ingress-grpc
  namespace: apps
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: "nginx" # сначала - minikube addons enable ingress
  rules:
  # вызывать с указанием порта 80 после запуска туннеля minikube tunnel
  - host: calendar-grpc.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: calendar
            port:
              number: 8081
